# VectorDB

./: CMakeLists.txt  Readme.md
include/vectorex/: vector.hpp
src/: main.cpp  vector.cpp
